snapshot-tests/tests/snapshots/parser__datetimes__bad_minute.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidDateTime]: invalid datetime: minute is out of range at `a`
  ┌─ bad_minute:1:5
  │
1 │ a = 2016-09-09T09:60:00
  │     ^^^^^^^^^^^^^^^^^^^ invalid datetime: minute is out of range
